--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,41 @@ spring.thymeleaf.cache=false
 
 
 #spring.devtools.livereload.enabled= true
+#??? dev mode? ???? ?? ???? ?? ????.
+
+
+
+
+#___________________________________________________________________________________________________________ + datasource configurations
+spring.datasource.url=jdbc:mariadb://localhost:3306/jhpDB
+# ???? schema ??? ???? ????????.  ????? ???? ????  ?? ? ????.
+#spring.datasource.url=jdbc:mariadb://localhost:3306/springboot_mariadb
+spring.datasource.username=jhp
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# Keep the connection alive if idle for a long time (needed in production)
+#spring.datasource.testWhileIdle=true
+#spring.datasource.validationQuery=SELECT 1
+
+
+
+
+#____________________________________________________________________________________________________________ + JPA / HIBERNATE
+# ___________________________________________________
+# Show or not log for each sql query
+#spring.jpa.show-sql=true
+# ___________________________________________________
+# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
+# schema will be automatically created afresh for every start of application
+
+
+spring.jpa.hibernate.ddl-auto=create-drop
+#??? ???? ? ??? ???? ??? ??? ?? ? ????.
+#?? prod ??? ??? ??? ??? ? ??? ???? ????
+
+
+# Naming strategy
+#spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
