++ 정상작동확인완료 == + JpaRepository를 extends 하여 interface로서  BoardReposory로 만들어 @Autowired하여 spring에게 DI를 지시하여 List<Board> board_records에 담았습니다.  board_records를 model에 담아서 boards.html로 보내었고 해당하는 board_records를 thymeleaf의 th:each 문법을 통해서 table body tag의 안에 값이 나타나도록 구현하였습니다.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,8 +45,9 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 # schema will be automatically created afresh for every start of application
 
 
-spring.jpa.hibernate.ddl-auto=create-drop
-#??? ???? ? ??? ???? ??? ??? ?? ? ????.
+#spring.jpa.hibernate.ddl-auto=create-drop
+#this option is will delete table when we shutdown server.
+#i think it will be useful, when we convert dev mode to prod mode
 #?? prod ??? ??? ??? ??? ? ??? ???? ????
 
 
